created select demo

--- a/app/views/selections/index.html.erb
+++ b/app/views/selections/index.html.erb
@@ -1,1 +1,20 @@
 <%= render '/shared/header', greeting: "Selection Demo" %>
+<%= content_tag :div,
+                class: "container border border-primary p-2",
+                data: {controller: "select-food", action: "change->select-food#selectFoodItems"} do %>
+  <%= content_tag :div, class: "input-group mb-3" do %>
+    <%= label_tag "heading", "Food headings", class: "input-group-text" %>
+    <%= select_tag "heading",
+                    options_for_select(@food_options.map { |id, name| [name, id] }),
+                    :prompt => "Select food headings",
+                    class: "form-select" %>
+  <% end %>
+  <%= content_tag :div, class: "input-group mb-3" do %>
+    <%= label_tag "headings-items", "Food Items", class: "input-group-text" %>
+    <%= select_tag "headings-items",
+                    options_for_select([]),
+                    :prompt => "Select food Item",
+                    class: "form-select",
+                    data: {select_food_target: "items"}  %>
+  <% end %>
+<% end %>
