--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<%= render '/shared/header', greeting: "Hello, Rails! - Input and Click Demo" %>
+<%= render '/shared/header', greeting: "Input and Click Demo" %>
 <%= render 'add_and_take'  %>
 <%= render 'count_letters' %>
 <%= render 'select_option', my_options: @my_options %>
