--- a/app/views/home/_select_option.html.erb
+++ b/app/views/home/_select_option.html.erb
@@ -4,7 +4,7 @@
                  class: "d-flex container" do %>
    <%= tag.h3 "Select an option", class: "container-fluid text-primary mt-2" %>
    <%= select_tag "concept",
-                   options_for_select(["Select an option"] + my_options.map {|id, name| [name, id]}),
+                   options_for_select([["Select an option", nil, { disabled: true, selected: true }]] + my_options.map { |id, name| [name, id] }),
                    data: {optative_target: "selected", action: "change->optative#sendId"},
                    class: "form-select" %>
    <%= tag.input data: {optative_target: "idconcept" }, placeholder: "Id Concept:", class: "form-control" %>
