--- a/app/views/turbo_demos/_content3.html.erb
+++ b/app/views/turbo_demos/_content3.html.erb
@@ -1,23 +1,25 @@
 <turbo-frame id="content", class="d-flex flex-column flex-grow-1 align-items-center border border-primary rounded-2 p-1">
+  <%= render 'demo_1' %>
+  
   <%= content_tag :div, class: "container d-flex flex-column border border-dark-subtle rounded-2 p-1 mt-3 mb-3" do %>
     <%= content_tag :div, class: "text-center" do %>
-      <h2>Selection Demo</h2>
+      <h2>Selection Demo 2</h2>
       <%= content_tag :div, class: "d-flex flex-column" do %>
-        <%= form_with url: words_counter_turbo_demos_path, method: :post, data: { turbo_stream: true }, class: "input-group mb-3" do |form| %>
-          <%= form.label :selected, "Options", class: "input-group-text" %>
-          <%= form.select :selected,
-            options_for_select( [["Select an option", nil, { disabled: true, selected: true }]] + @my_options.map { |id, name| [name, id] }),
-            {},
-            class: "form-select",
-            onchange: "this.form.requestSubmit()" %>
+        <%= form_with url: select_demo_2_turbo_demos_path, method: :post, data: { turbo_stream: true }, class: "input-group mb-3"  do |form| %>
+          <%= form.label :heading, "Headings", class: "input-group-text" %>
+          <%= form.select :heading,                         
+                          options_for_select([["Select an option", nil, { selected: true, disabled: true }]] + @food_headings.map { |val, name| [name, val] }),
+                          {},
+                          class: "form-select",
+                          onchange:"this.form.requestSubmit()" %>
         <% end %>
-        <%= turbo_frame_tag "value" do %>
-          <%= content_tag :div, class:"input-group mb-3" do %>
-            <%= label_tag "value", "Value", class:"input-group-text" %>
-            <%= text_field_tag 'value',nil, placeholder: "Empty", class:"form-control", disabled: true %>
-          <% end %>
-        <% end %> 
-      <% end %>       
-    <% end %>    
+      <% end %>
+      <%= turbo_frame_tag "food" do %>
+        <%= content_tag :div, class:"input-group mb-3" do %>
+          <%= label_tag "food_items", "Food_items", class:"input-group-text" %>
+          <%= select_tag "food_items", options_for_select([["Select an option", nil, { selected: true, disabled: true }]]), class: "form-select" %>
+        <% end %>
+      <% end %>
+    <% end %>
   <% end %>
 </turbo-frame>
