words counter finished

--- a/app/views/turbo_demos/_content4.html.erb
+++ b/app/views/turbo_demos/_content4.html.erb
@@ -1,4 +1,3 @@
 <turbo-frame id="content", class="d-flex flex-column flex-grow-1 align-items-center border border-primary rounded-2 p-1">
-  <%= render 'demo_1' %>
-  <%= render 'demo_2' %>  
+  <%= render 'content4_input' %>  
 </turbo-frame>
