--- a/app/views/turbo_demos/_menu.html.erb
+++ b/app/views/turbo_demos/_menu.html.erb
@@ -1,14 +1,30 @@
-<%= content_tag :ul, class: "container-fluid ", class:"list-group" do %>
+<%= content_tag :ul, data: { controller: "menu" }, class: "list-group" do %>
   <%= content_tag :li do %>
-    <%= button_to "Add and take", content1_turbo_demos_path, method: :post, form: { data:  { turbo_stream: true } }, class: "list-group-item  list-group-item-action" %>
+    <%= button_to "Add and take",
+                   content1_turbo_demos_path,
+                   method: :post,                   
+                   data:  { turbo_stream: true, menu_target: "items", action: "click->menu#activate" },                  
+                   class: "list-group-item  list-group-item-action" %>
   <%end%>
   <%= content_tag :li do %>
-    <%= button_to "Characters counter", content2_turbo_demos_path, method: :post, from: { data: { turbo_stream: true } }, class: "list-group-item  list-group-item-action" %>
+    <%= button_to "Characters counter",
+                   content2_turbo_demos_path,
+                   method: :post,
+                   data: { turbo_stream: true, menu_target: "items", action: "click->menu#activate" },
+                   class: "list-group-item  list-group-item-action" %>
   <%end%>
   <%= content_tag :li do %>
-    <%= button_to "Selection", content3_turbo_demos_path, method: :post, from: { data: { turbo_stream: true } }, class: "list-group-item  list-group-item-action" %>
+    <%= button_to "Selection",
+                   content3_turbo_demos_path,
+                   method: :post,
+                   data: { turbo_stream: true, menu_target: "items", action: "click->menu#activate" },
+                   class: "list-group-item  list-group-item-action" %>
   <% end %>
   <%= content_tag :li do %>
-    <%= button_to "Words Counter", content4_turbo_demos_path, method: :post, from: { data: { turbo_stream: true } }, class: "list-group-item  list-group-item-action" %>
+    <%= button_to "Words Counter",
+                   content4_turbo_demos_path,
+                   method: :post,
+                   data: { turbo_stream: true, menu_target: "items", action: "click->menu#activate" },
+                   class: "list-group-item  list-group-item-action" %>
   <% end %>
 <%end%>
